Setup Player CPU and fix issue of being able to click on icon options when div was intended to be invisible

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     place-items: center;
     width: 100vw;
     height: 100%;
+    min-height: 700px;
     background-color: #F5F5F5;
     background-repeat: repeat;
     background-size: 25px;
@@ -76,6 +77,7 @@ body {
     border-radius: 5px;
     margin-bottom: -10px;
     opacity: 0;
+    pointer-events: none;
 }
 
 #player-O-icon-options img,
@@ -143,7 +145,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 70px;
+    width: 75px;
     max-height: 45px;
     font-family: "lato", sans-serif;
     font-size: 12px;
